[tool.poetry]
name = "leveleditor"
version = "0.1.0"
description = ""
authors = ["Alexander <borzoff@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
